force-app/main/default/objects/User_actions__mdt/User_actions__mdt.object-meta.xml
<CustomObject>
    <description>Gets the user actions.</description>
    <label>User action</label>
    <pluralLabel>User actions</pluralLabel>
</CustomObject>