force-app/main/default/objects/User_actions__mdt/fields/LOG_PCK_Action__c.field-meta.xml
<CustomField>
    <fullName>LOG_PCK_Action__c</fullName>
    <label>User Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MO</fullName>
                <default>true</default>
                <label>MO</label>
            </value>
            <value>
                <fullName>EL</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>SU</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>VP</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>VE</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>