force-app/main/default/objects/User_actions__mdt/fields/USR_PCK_UserType__c.field-meta.xml
<CustomField>
    <fullName>USR_PCK_UserType__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C</label>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>